# optical-entropy-generation

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
.devcontainer/: devcontainer.json
ansible/: README.md
ansible/inventory/: hosts.yml
ansible/playbooks/: monitoring.yml
ansible/roles/alertmanager/defaults/: main.yml
ansible/roles/alertmanager/handlers/: main.yml
ansible/roles/alertmanager/tasks/: main.yml
ansible/roles/alertmanager/templates/: alertmanager.service.j2
ansible/roles/entropy-exporter/defaults/: main.yml
ansible/roles/entropy-exporter/handlers/: main.yml
ansible/roles/entropy-exporter/tasks/: main.yml
ansible/roles/entropy-exporter/templates/: entropy-exporter.service.j2
ansible/roles/grafana/defaults/: main.yml
ansible/roles/grafana/handlers/: main.yml
ansible/roles/grafana/tasks/: main.yml
ansible/roles/grafana/templates/: datasources.yml.j2  grafana.ini.j2  grafana.service.j2
ansible/roles/prometheus/defaults/: main.yml
ansible/roles/prometheus/handlers/: main.yml
ansible/roles/prometheus/tasks/: main.yml
ansible/roles/prometheus/templates/: prometheus.service.j2  prometheus.yml.j2
monitoring/: README.md
monitoring/alertmanager/: alertmanager.yml  alertmanager.yml.example
monitoring/alertmanager/templates/: email.tmpl
monitoring/grafana/dashboards/: entropy-overview.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alerts.yml  recording.yml
src/: lib.rs  main.rs
src/analysis/: health.rs  mod.rs  statistics.rs  threshold.rs
src/capture/: camera.rs  config.rs  frame.rs  mod.rs
src/conditioning/: hash.rs  mod.rs  pool.rs
src/extraction/: bitstream.rs  mod.rs  spatial.rs  temporal.rs
src/metrics/: collector.rs  mod.rs  server.rs
src/reseeding/: csprng.rs  mod.rs
